@@ -4,7 +4,7 @@ package magick;
  * Corresponds to the ImageMagick enumerated type of the same name.
  *
  * Important! Constant values should correspond to:
- * http://trac.imagemagick.org/browser/ImageMagick/branches/ImageMagick-6.6.2/magick/profile.h
+ * http://trac.imagemagick.org/browser/ImageMagick/branches/ImageMagick-6.6.9/magick/profile.h
  *
  * @author Eric Yeo
  */
