@@ -4,7 +4,7 @@ package magick;
  * Corresponds to the ImageMagick enumerated type of the same name.
  *
  * Important! Constant values should correspond to:
- * http://trac.imagemagick.org/browser/ImageMagick/branches/ImageMagick-6.6.2/magick/image.h
+ * http://trac.imagemagick.org/browser/ImageMagick/branches/ImageMagick-6.6.9/magick/image.h
  */
 public interface ResolutionType {
 
